renaming sandbox module

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,8 +7,8 @@
 [submodule "include/tracy"]
 	path = include/tracy
 	url = https://github.com/wolfpld/tracy.git
-[submodule "application/Arbrook-Sandbox"]
-	path = application/Arbrook-Sandbox
+[submodule "application/sandbox"]
+	path = application/sandbox
 	url = https://github.com/Ragingram2/Arbrook-Sandbox.git
 [submodule "arbrook/input"]
 	path = arbrook/input
