--- a/.gitignore
+++ b/.gitignore
@@ -412,3 +412,7 @@ bin/lib/graphics-d.lib
 bin/lib/input.lib
 bin/lib/input-d.lib
 bin/lib/rendering-d.lib
+bin/lib/assimp-d.lib
+bin/lib/SPIRV-Tools-opt-d.lib
+bin/build/sandbox-d.exe
+bin/lib/rsl-d.lib
