--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "modules/arbrook/input/third_party/gainput"]
 	path = modules/arbrook/input/third_party/gainput
 	url = https://github.com/Ragingram2/gainput.git
+[submodule "modules/arbrook/physics/third_party/JoltPhysics"]
+	path = modules/arbrook/physics/third_party/JoltPhysics
+	url = https://github.com/jrouwe/JoltPhysics.git
