--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "modules/arbrook/graphics/third_party/SPIRV-Cross"]
 	path = modules/arbrook/graphics/third_party/SPIRV-Cross
 	url = https://github.com/Ragingram2/SPIRV-Cross.git
+[submodule "modules/arbrook/graphics/third_party/SPIRV-Tools"]
+	path = modules/arbrook/graphics/third_party/SPIRV-Tools
+	url = https://github.com/Ragingram2/SPIRV-Tools.git
