fixing bugs in RSL

--- a/applications/sandbox/src/sandbox/imgui.ini
+++ b/applications/sandbox/src/sandbox/imgui.ini
@@ -44,8 +44,8 @@ Size=438,191
 Collapsed=0
 
 [Window][Inspector]
-Pos=1419,36
-Size=501,973
+Pos=1439,36
+Size=481,708
 Collapsed=0
 DockId=0x00000002,0
 
@@ -100,19 +100,19 @@ DockId=0x00000009,0
 Pos=375,19
 Size=659,701
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000008,0
 
 [Window][Heirarchy]
 Pos=0,36
-Size=274,667
+Size=273,708
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene]
-Pos=276,36
-Size=1141,667
+Pos=275,36
+Size=1162,708
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000001,0
 
 [Window][Console]
 Pos=0,497
@@ -136,24 +136,25 @@ Size=469,398
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,705
-Size=1417,304
+Pos=0,746
+Size=1920,263
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000B,0
 
 [Docking][Data]
-DockNode            ID=0x00000003 Pos=85,7 Size=876,478 Split=X
-  DockNode          ID=0x00000004 Parent=0x00000003 SizeRef=470,438 Selected=0x7B1E6A28
-  DockNode          ID=0x00000005 Parent=0x00000003 SizeRef=404,438 Selected=0xF02CD328
-DockSpace           ID=0xC0C36D73 Window=0xCB5DF48C Pos=0,36 Size=1920,973 Split=X Selected=0x71B61B7A
-  DockNode          ID=0x00000001 Parent=0xC0C36D73 SizeRef=1417,973 Split=Y
-    DockNode        ID=0x00000010 Parent=0x00000001 SizeRef=1920,667 Split=Y
-      DockNode      ID=0x0000000C Parent=0x00000010 SizeRef=1280,476 Split=X
-        DockNode    ID=0x00000008 Parent=0x0000000C SizeRef=1034,701 Split=X
-          DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=274,701 Selected=0xE884D536
-          DockNode  ID=0x00000007 Parent=0x00000008 SizeRef=1141,701 CentralNode=1 Selected=0x18B8C0DE
-        DockNode    ID=0x00000009 Parent=0x0000000C SizeRef=244,701 Selected=0x962FC36C
-      DockNode      ID=0x0000000D Parent=0x00000010 SizeRef=1280,223 Selected=0xF9BEF62A
-    DockNode        ID=0x00000011 Parent=0x00000001 SizeRef=1920,304 Selected=0xB04EBF39
-  DockNode          ID=0x00000002 Parent=0xC0C36D73 SizeRef=501,973 Selected=0xF02CD328
+DockNode        ID=0x00000003 Pos=85,7 Size=876,478 Split=X
+  DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=470,438 Selected=0x7B1E6A28
+  DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=404,438 Selected=0xF02CD328
+DockSpace       ID=0x9B2468E7 Window=0xA0CE3128 Pos=0,36 Size=1920,973 Split=Y Selected=0xE601B12F
+  DockNode      ID=0x0000000A Parent=0x9B2468E7 SizeRef=1920,708 Split=X
+    DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=273,973 Selected=0x0B397EC5
+    DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1645,973 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=522,973 CentralNode=1 Selected=0xE601B12F
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=481,973 Selected=0x36DC96AB
+  DockNode      ID=0x0000000B Parent=0x9B2468E7 SizeRef=1920,263 Selected=0x36AF052B
+DockSpace       ID=0xC0C36D73 Pos=0,36 Size=1920,973 Split=Y Selected=0x71B61B7A
+  DockNode      ID=0x0000000C Parent=0xC0C36D73 SizeRef=1280,476 Split=X
+    DockNode    ID=0x00000008 Parent=0x0000000C SizeRef=1034,701 CentralNode=1
+    DockNode    ID=0x00000009 Parent=0x0000000C SizeRef=244,701 Selected=0x962FC36C
+  DockNode      ID=0x0000000D Parent=0xC0C36D73 SizeRef=1280,223 Selected=0xF9BEF62A
 
