trying to put logging in a imgui weindow

--- a/applications/sandbox/src/sandbox/imgui.ini
+++ b/applications/sandbox/src/sandbox/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=30,71
-Size=482,624
+Pos=146,95
+Size=1080,568
 Collapsed=0
 
 [Window][Change Model]
@@ -44,8 +44,8 @@ Size=438,191
 Collapsed=0
 
 [Window][Inspector]
-Pos=1439,36
-Size=481,771
+Pos=1078,36
+Size=202,447
 Collapsed=0
 DockId=0x00000002,0
 
@@ -87,7 +87,7 @@ DockId=0x00000004,0
 
 [Window][Editor]
 Pos=0,0
-Size=1920,1009
+Size=1280,720
 Collapsed=0
 
 [Window][Entity Inspector]
@@ -104,21 +104,21 @@ DockId=0x00000008,0
 
 [Window][Heirarchy]
 Pos=0,36
-Size=273,771
+Size=187,447
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene]
-Pos=275,36
-Size=1162,771
+Pos=189,36
+Size=887,447
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Console]
-Pos=0,497
-Size=1153,223
+Pos=0,485
+Size=1280,235
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x0000000B,0
 
 [Window][Example: Log]
 Pos=139,108
@@ -136,25 +136,23 @@ Size=469,398
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,809
-Size=1920,200
+Pos=0,485
+Size=1280,235
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000B,1
 
 [Docking][Data]
 DockNode        ID=0x00000003 Pos=85,7 Size=876,478 Split=X
   DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=470,438 Selected=0x7B1E6A28
   DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=404,438 Selected=0xF02CD328
-DockSpace       ID=0x9B2468E7 Window=0xA0CE3128 Pos=0,36 Size=1920,973 Split=Y Selected=0xE601B12F
-  DockNode      ID=0x0000000A Parent=0x9B2468E7 SizeRef=1920,771 Split=X
-    DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=273,973 Selected=0x0B397EC5
-    DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1645,973 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=522,973 CentralNode=1 Selected=0xE601B12F
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=481,973 Selected=0x36DC96AB
-  DockNode      ID=0x0000000B Parent=0x9B2468E7 SizeRef=1920,200 Selected=0x36AF052B
-DockSpace       ID=0xC0C36D73 Pos=0,36 Size=1920,973 Split=Y Selected=0x71B61B7A
-  DockNode      ID=0x0000000C Parent=0xC0C36D73 SizeRef=1280,476 Split=X
-    DockNode    ID=0x00000008 Parent=0x0000000C SizeRef=1034,701 CentralNode=1
-    DockNode    ID=0x00000009 Parent=0x0000000C SizeRef=244,701 Selected=0x962FC36C
-  DockNode      ID=0x0000000D Parent=0xC0C36D73 SizeRef=1280,223 Selected=0xF9BEF62A
+DockSpace       ID=0x9B2468E7 Window=0xA0CE3128 Pos=0,36 Size=1280,684 Split=Y Selected=0xE601B12F
+  DockNode      ID=0x0000000A Parent=0x9B2468E7 SizeRef=1280,447 Split=X
+    DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=187,973 Selected=0x0B397EC5
+    DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=810,973 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=887,973 CentralNode=1 Selected=0xE601B12F
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=202,973 Selected=0x36DC96AB
+  DockNode      ID=0x0000000B Parent=0x9B2468E7 SizeRef=1280,235 Selected=0xEA83D666
+DockSpace       ID=0xC0C36D73 Pos=0,36 Size=1920,973 Split=X Selected=0x71B61B7A
+  DockNode      ID=0x00000008 Parent=0xC0C36D73 SizeRef=1034,701 CentralNode=1
+  DockNode      ID=0x00000009 Parent=0xC0C36D73 SizeRef=244,701 Selected=0x962FC36C
 
